# varuna

./: .gitignore  CLAUDE.md  INSTALL.txt  README.md  firmware.txt  index.circuit.tsx  package-lock.json  package.json  parts.txt
enclosure/: README.md  varuna-enclosure.scad
firmware/: README.md  platformio.ini  pyproject.toml
firmware/src/: config.h  main.cpp  pins.h  web_ui.h
imports/: BK250_250.tsx  BL0942.tsx  S3B_XH_A_LF__SN_.tsx  SC72AAB.tsx  SRD_05VDC_SL_C.tsx  SS12D10G3.tsx  ULN2003ADR.tsx  WJ128V_5_0_03P_14_00A.tsx  WJ500V_5_08_2P.tsx  ZMPT101B.tsx
notes/: bare-module-migration.md  energy-metering.md
pcb/: index.circuit.tsx  parts.txt
pcb/imports/: DB128L_5_08_4P_GN_S.tsx  HLK_5M05.tsx  PRTR5V0U2X.tsx  TMOV14RP275E.tsx  TS_1101_C_W.tsx
